Check ldap timeout for CMS certificate search
Closed, ResolvedPublic

Assigned To
Authored By
bernhard
Nov 7 2017, 8:55 AM

Description

There should be a reasonable default timeout when searching a server via LDAP for CMS certificates.

Problem observed with, Gpg4win 3.0.0 on Windows 10 DE Outlook 2016
Freshly installed as DE. Imported some seckey material.

Entered via kleo -> settings -> dirmngr
ca.intevation.de ldap o=Intevation GmbH, c=de
Ldap timeout by default was 0:00
-> Searches do not terminate and there is no response. (ca.intevation.de was somehow unresponsive during this test).
if you press "close" on the search window, something hangs in the background
-> Makes the rest of application partly unusable

[normal] change default to a reasonable time out, e.g. 0:10

Details

Version
3.0.0

Event Timeline

bernhard created this object in space S1 Public.

The default for the timeout are 100 seconds. I will chnage that to 15 seconds which is the same what we use for keyservers.

So maybe there is also a display problem, as I saw 0:00 in Kleo. I have to recheck.

aheinecke added a subscriber: aheinecke.

Indeed bug in Kleo, it was always 0 in kleo. (likely created during Qt5 port) fixed with: https://commits.kde.org/kleopatra/0d53416cfbe6d8fa087887c428cdfffb13514a7d